# textprompts

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  plan.md  pyproject.toml  tests
.github/workflows/: TagBot.yml  ci.yml  docs.yml  ex-ci.yml  go-ci.yml  julia-ci.yml  julia.yml  release.yml
TextPrompts.jl/: Project.toml
TextPrompts.jl/src/: TextPrompts.jl  cli.jl  config.jl  errors.jl  loaders.jl  models.jl  parser.jl  placeholder_utils.jl  prompt_string.jl  savers.jl
TextPrompts.jl/test/: runtests.jl
docs/: Gemfile  _config.yml  api-reference.md  elixir-port-scope.md  examples.md  file-format.md  getting-started.md  index.md  integrations.md
docs/specs/: SPEC_conditional_syntax_v2.md
docs/writing-prompts-with-textprompts/: SKILL.md
examples/: README.md  basic_usage.py  metadata_modes_demo.py  pydantic_ai_example.py  simple_format_demo.py
examples/conditional/: README.md
julia/TextPrompts/: Project.toml
julia/docs/: make.jl
python/tests/: conftest.py  test_cli.py  test_edge_cases.py  test_loaders.py  test_metadata_modes.py  test_placeholder_utils.py  test_prompt_model_methods.py  test_savers.py
src/textprompts/: __init__.py  __main__.py  _parser.py  cli.py  config.py  errors.py  frontmatter_schema.py  identifiers.py  loaders.py  models.py  savers.py  (+6 more)
tests/: test_cli.py  test_conformance.py  test_edge_cases.py  test_extras.py  test_frontmatter_schema.py  test_frontmatter_separator.py  test_implicit_flags.py  test_loaders.py  test_metadata_modes.py  test_placeholder_utils.py  test_prompt_constructor.py  test_prompt_model_methods.py  test_prompt_string.py  test_public_api.py  test_reconcile.py  test_safe_string.py  test_savers.py  test_sections.py  test_v2_format.py  test_yaml_support.py
(+252 files in other folders)
