[project]
name = "textprompts"
version = "0.0.3"
description = "Minimal text-based prompt-loader with TOML front-matter"
readme = "README.md"
license = "MIT"
license-file = "LICENSE"
authors = [
    {name = "Jan Siml", email = "49557684+svilupp@users.noreply.github.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["prompts", "toml", "frontmatter", "template"]
requires-python = ">=3.11"
dependencies = [
    "pydantic~=2.7",
    "tomli>=1.0.0; python_version<'3.11'",
]

[project.urls]
"Homepage" = "https://github.com/svilupp/textprompts"
"Bug Tracker" = "https://github.com/svilupp/textprompts/issues"
"Documentation" = "https://github.com/svilupp/textprompts#readme"

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.2",
    "pre-commit>=3.0.0",
]
test = [
    "pydantic-ai>=0.4.5",
]

[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[project.scripts]
textprompts = "textprompts.cli:main"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Ignore line length

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=textprompts --cov-report=html --cov-report=term-missing"
